src/objects/Meeting_Participant_MERC__c.object
<CustomObject>
    <fields>
        <fullName>Accountable_Business_Contact_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Lilly contact accountable to answer questions or own follow-ups related to this Meeting Participant : MERC : Created on 22/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>The Lilly contact accountable to answer questions or own follow-ups related to this Meeting Participant</inlineHelpText>
        <label>Accountable Business Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Employee_GLBL</value>
            </filterItems>
            <infoMessage>If you cannot find the record you&apos;re looking for. Select the &quot;All Fields&quot; option to search across additional criteria.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Meeting Participants (Accountable Business Contact)</relationshipLabel>
        <relationshipName>Accountable_Business_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HCP_Info_Pack_Received_Date_MERC__c</fullName>
        <description>MERC - Date HCP Info Pack is received.  Pulled through from Account object (where set via workflow rule).  Created by Mike Cashman, Mavens Consulting on 3/3/15.</description>
        <formula>Account_MERC__r.HCP_Info_Pack_Received_Date_MERC__c</formula>
        <label>HCP Info Pack Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HCP_Info_Package_Follow_Up_Date_MERC__c</fullName>
        <description>Date on which to follow up with HCP regarding status of HCP Info Package (to be sent back from HCP).  Should be set by user.  Available via reporting for greater ease of HCP Info Pack tracking/ processing.  Created by Mike Cashman, Mavens Consulting on 23/2/2015.</description>
        <inlineHelpText>Can be used by CMS Cork to indicate when they should follow up with the Meeting Owner/HCP should the HCP Info Pack remain outstanding.  This is used to drive reporting on all outstanding HCP Info Packs and should be updated manually by CMS Cork.</inlineHelpText>
        <label>HCP Info Package Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HCP_Info_Package_Sent_Date_MERC__c</fullName>
        <description>Date on which Info Package was sent to HCP.  Used in SLA Reporting.  Created by Mike Cashman, Mavens Consulting on 23/2/2015.</description>
        <inlineHelpText>This field should be manually set once the HCP Info Pack has been sent to the HCP.  If the HCP preference is population via the Web Services, this should be set to the date that they were invited to populate the HCP Info Pack via the Web Service.</inlineHelpText>
        <label>HCP Info Package Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HCP_Info_Package_Status_MERC__c</fullName>
        <description>Pulls through HCP Info Pack Status value to Meeting Participant record for greater ease of tracking.</description>
        <formula>TEXT(Account_MERC__r.HCP_Info_Package_Status_MERC__c)</formula>
        <inlineHelpText>Pulled from the HCP profile and shows the status of HCP Info Pack completion.  For a paper based process, the field on the HCP Profile should be set manually to &apos;Submitted&apos; once completed, this is automatic if completed by the HCP via the Web Service.</inlineHelpText>
        <label>HCP Info Package Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logistic_Compliance_Comments_MERC__c</fullName>
        <description>Captures free-text logistics information to share with meeting teams : MERC : Created on 17/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Record appropriate comments for this participant viewable by CMS Regional and Local CMS teams. Follow applicable country privacy requirements</inlineHelpText>
        <label>Logistic/Compliance Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SEA_WO_Follow_Up_Date_MERC__c</fullName>
        <description>Stamped by Process Builder/Flow for Contact Status Updates : MERC : Created on 20/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>SEA/WO Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEA_WO_Received_Date_MERC__c</fullName>
        <description>Stamped by Process Builder/Flow for Contact Status Updates : MERC : Created on 20/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>SEA/WO Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEA_WO_Sent_Date_MERC__c</fullName>
        <description>Stamped by Process Builder/Flow for Contact Status Updates : MERC : Created on 20/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>SEA/WO Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEA_WO_Signed_Date_Time_MERC__c</fullName>
        <description>Stamped by Process Builder/Flow for Contact Status Updates : MERC : Created on 20/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>SEA/WO Signed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SEA_WO_Status_MERC__c</fullName>
        <description>Stamped by Process Builder/Flow for Contact Status Updates : MERC : Created on 20/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>SEA/WO Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_for_Payment_Date_MERC__c</fullName>
        <description>Stores the Invoice Information populated via Process Builder for parties without Invoice access : MERC : Created on 20/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Includes Fees and/or Expenses</inlineHelpText>
        <label>Submitted for Payment Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitted_for_Payment_MERC__c</fullName>
        <description>Stores the Invoice Information populated via Process Builder for parties without Invoice access : MERC : Created on 20/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Includes Fees and/or Expenses</inlineHelpText>
        <label>Submitted for Payment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>MERC_Lock_Final_Fee</fullName>
        <active>true</active>
        <description>Locks the Final Fee once confirmed, unless you&apos;re flagged as a power user in the user profile (CMS Cork) : MERC : Created on 17/04/2015 by Oliver Dunford, Mavens Consulting.</description>
        <errorConditionFormula>ISCHANGED( Proposed_Final_Fee_MERC__c ) 
&amp;&amp; 
ISPICKVAL( Confirm_Final_Fee_MERC__c , &quot;Confirmed&quot;) 
&amp;&amp; 
$User.Power_User_MERC__c = FALSE 
&amp;&amp; 
( 
$Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp; 
$Profile.Name &lt;&gt; &quot;Mercury Integration ODS - Platform&quot; 
)</errorConditionFormula>
        <errorDisplayField>Confirm_Final_Fee_MERC__c</errorDisplayField>
        <errorMessage>Once confirmed, you cannot change the Final Fee.  Please contacts a member of the CMS Regional team for assistance.</errorMessage>
    </validationRules>
</CustomObject>